lnrpc+lncli: implement createaccount and listaccounts
